# bordom-os

./: rust-toolchain.toml
crates/boot/: Cargo.toml  build.rs
crates/boot/src/: main.rs
crates/common/src/: lib.rs
crates/common/src/iter/: mod.rs
crates/common/src/user/: mod.rs
crates/global/: Cargo.toml
crates/global/src/: lib.rs
crates/global/src/io/: ansi.rs  color.rs  mod.rs
crates/kernel/: Cargo.toml
crates/kernel/.cargo/: config.toml
crates/kernel/src/: apic.rs  color.rs  font.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  ps2.rs  serial.rs  tracing.rs
crates/kernel/src/allocator/: fixed_size_block.rs  mod.rs
crates/kernel/src/display/: framebuffer.rs  mod.rs
crates/kernel/src/task/: executor.rs  keyboard.rs  mod.rs  output.rs
crates/kernel/src/thread/: local.rs  mod.rs
crates/kernel/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
crates/keyboard/: Cargo.toml
crates/keyboard/src/: key_code.rs  lib.rs
