[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bootloader = "0.11.0"

[build-dependencies.kernel]
path = "../kernel"
artifact = "bin"
target = "x86_64-unknown-none"

# [dependencies.time]
# version = "0.3.17"
# default-features = false
# features = ["alloc", "formatting", "local-offset"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"